--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
     "@prisma/client": "^6.5.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
     "@tanstack/react-table": "^8.21.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.1",
@@ -22,7 +24,7 @@
     "embla-carousel-autoplay": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.5.0",
-    "lucide-react": "^0.479.0",
+    "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
     "postcss": "^8.5.3",
