--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
-    "next-auth": "^5.0.0-beta.25",
+    "next-auth": "^4.0.0",
     "pg": "^8.14.0",
     "pg-promise": "^11.12.1",
     "postcss": "^8.5.3",
