--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-email/components": "^0.0.34",
     "@tanstack/react-table": "^8.21.2",
     "@types/bcrypt": "^5.0.2",
     "bcrypt": "^5.1.1",
@@ -32,12 +33,12 @@
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
-    "next-auth": "^4.0.0",
-    "pg": "^8.14.0",
-    "pg-promise": "^11.12.1",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-email": "^3.0.7",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
@@ -49,7 +50,6 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.13",
     "@types/node": "^20",
-    "@types/pg": "^8.11.11",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
