--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@hookform/resolvers": "^4.1.3",
+    "@hookform/resolvers": "^4.1.3  ",
     "@icons-pack/react-simple-icons": "^12.3.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/adapter-pg": "^6.5.0",
@@ -32,6 +32,8 @@
     "@react-email/components": "^0.0.34",
     "@tanstack/react-table": "^8.21.2",
     "@types/bcrypt": "^5.0.2",
+    "@types/nodemailer": "^6.4.17",
+    "@types/pg": "^8.11.11",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -45,6 +47,8 @@
     "next": "15.2.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.0",
+    "pg": "^8.14.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -62,6 +66,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.0.13",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
