--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "next": "15.2.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.0",
     "pg": "^8.14.0",
     "pg-promise": "^11.12.1",
     "postcss": "^8.5.3",
