--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
+    "react-motions": "^0.3.0",
     "react-sortable-hoc": "^2.0.0",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
