--- a/package.json
+++ b/package.json
@@ -36,6 +36,11 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-table": "^8.21.2",
+    "@tiptap/extension-text-align": "^2.11.7",
+    "@tiptap/extension-underline": "^2.11.7",
+    "@tiptap/pm": "^2.11.7",
+    "@tiptap/react": "^2.11.7",
+    "@tiptap/starter-kit": "^2.11.7",
     "@types/bcrypt": "^5.0.2",
     "@types/nodemailer": "^6.4.17",
     "bcrypt": "^5.1.1",
