--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
+    "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
     "pg": "^8.14.0",
