--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,14 @@
 DATABASE_URL="postgresql://postgres:1234@localhost:5432/mydb?schema=public"
 NEXTAUTH_SECRET="your_random_secret"
 GOOGLE_CLIENT_ID="your_google_client_id"
-GOOGLE_CLIENT_SECRET="your_google_client_secret
+GOOGLE_CLIENT_SECRET="your_google_client_secret"
+
+MAIL_HOST=
+MAIL_PORT=
+MAIL_USER=
+MAIL_PASS=
+
+GCP_PROJECT_ID=
+GCP_CLIENT_EMAIL=
+GCP_PRIVATE_KEY=
+GCS_BUCKET_NAME=
