--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "@icons-pack/react-simple-icons": "^12.3.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/adapter-pg": "^6.5.0",
-    "@prisma/client": "^6.5.0",
+    "@prisma/client": "^6.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -84,6 +84,7 @@
     "@types/node": "^20",
     "@types/pg": "^8.11.11",
     "@types/react": "^19",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
