--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@hookform/resolvers": "^4.1.3",
     "@icons-pack/react-simple-icons": "^12.3.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@prisma/adapter-pg": "^6.5.0",
-    "@prisma/client": "^6.7.0",
+    "@prisma/adapter-pg": "6.5.0",
+    "@prisma/client": "6.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
@@ -59,7 +59,7 @@
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
     "nodemailer": "^6.10.0",
-    "pg": "^8.14.0",
+    "pg": "8.11.1",
     "pg-promise": "^11.12.1",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
