--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^4.1.3",
     "@icons-pack/react-simple-icons": "^12.3.0",
     "@next-auth/prisma-adapter": "^1.0.7",
+    "@next/third-parties": "^15.3.2",
     "@prisma/adapter-pg": "6.5.0",
     "@prisma/client": "6.7.0",
     "@radix-ui/react-accordion": "^1.2.3",
