--- a/.env.example
+++ b/.env.example
@@ -7,5 +7,5 @@
 DATABASE_URL="postgresql://postgres:1234@localhost:5432/mydb?schema=public"
 NEXTAUTH_SECRET="your_random_secret"
 GOOGLE_CLIENT_ID="your_google_client_id"
-GOOGLE_CLIENT_SECRET="your_google_client_secret
+GOOGLE_CLIENT_SECRET="your_google_client_secret"
 NEXT_PUBLIC_GA_ID="your_google_analytics_ID"
