--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@next/third-parties": "^15.3.2",
     "@prisma/adapter-pg": "6.5.0",
     "@prisma/client": "6.7.0",
+    "@prisma/extension-accelerate": "^1.3.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.3",
