--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
+    "eslint-config-prettier": "^10.1.5",
     "prisma": "^6.5.0",
     "tailwindcss": "^4.0.13",
     "ts-node": "^10.9.2",
