--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@next-auth/prisma-adapter": "^1.0.7",
     "@next/third-parties": "^15.3.2",
     "@prisma/adapter-pg": "6.5.0",
-    "@prisma/client": "6.7.0",
+    "@prisma/client": "6.5.0",
     "@prisma/extension-accelerate": "^1.3.0",
     "@radix-ui/react-accordion": "^1.2.3",
     "@radix-ui/react-aspect-ratio": "^1.1.2",
@@ -91,7 +91,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.2",
     "eslint-config-prettier": "^10.1.5",
-    "prisma": "^6.5.0",
+    "prisma": "6.5.0",
     "tailwindcss": "^4.0.13",
     "ts-node": "^10.9.2",
     "typescript": "^5"
