--- a/.env.example
+++ b/.env.example
@@ -4,18 +4,31 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgresql://postgres:1234@localhost:5432/mydb?schema=public"
-NEXTAUTH_SECRET="your_random_secret"
-GOOGLE_CLIENT_ID="your_google_client_id"
-GOOGLE_CLIENT_SECRET="your_google_client_secret"
-NEXT_PUBLIC_GA_ID="your_google_analytics_ID"
+NEXT_PUBLIC_BASE_URL="http://localhost:3000"
+NEXT_PUBLIC_BASE_URL_LABEL="localhost:3000"
 
+DATABASE_URL="postgresql://postgres:1234@localhost:5432/mydb?schema=public"
+
+# next auth 
+NEXTAUTH_URL="http://localhost:3000"
+NEXTAUTH_SECRET="your_random_secret"
+
+
+# mail trap
 MAIL_HOST=
 MAIL_PORT=
 MAIL_USER=
 MAIL_PASS=
 
+# google storage bucket 
 GCP_PROJECT_ID=
 GCP_CLIENT_EMAIL=
 GCP_PRIVATE_KEY=
 GCS_BUCKET_NAME=
+
+# google analytics
+NEXT_PUBLIC_GA_ID="your_google_analytics_ID"
+
+# stripe 
+NEXT_PUBLIC_STRIPE_PRICING_TABLE_ID=
+NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
