--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,16 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "stripe.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/hooks/useDashboardNotFoundRedirect"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "stripe.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/hooks/useDashboardNotFoundRedirect"
+  ],
+  "exclude": ["node_modules"],
+  "images": {
+    "domains": ["storage.googleapis.com"]
+  }
 }
