--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "pg": "8.11.1",
     "pg-promise": "^11.12.1",
     "postcss": "^8.5.3",
+    "qrcode.react": "^4.2.0",
     "react": "^19.0.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.0.0",
