feat(subscription): implement stripe and handle both success and failed cases for payment

--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "react-sortable-hoc": "^2.0.0",
     "recharts": "^2.15.1",
     "sonner": "^2.0.1",
+    "stripe": "^18.1.1",
     "tailwind-merge": "^3.0.2",
     "tailwindcss-animate": "^1.0.7",
     "zod": "^3.24.2",
