--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "framer-motion": "^12.5.0",
     "input-otp": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
+    "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.482.0",
     "next": "15.2.2",
     "next-auth": "^4.24.11",
