--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@radix-ui/react-toggle": "^1.1.2",
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
+    "@reactuses/core": "^6.0.3",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-table": "^8.21.2",
