--- a/.env.example
+++ b/.env.example
@@ -30,5 +30,14 @@ GCS_BUCKET_NAME=
 NEXT_PUBLIC_GA_ID="your_google_analytics_ID"
 
 # stripe 
-NEXT_PUBLIC_STRIPE_PRICING_TABLE_ID=
+NEXT_PUBLIC_STRIPE_ENG_PRICING_TABLE_ID=
+NEXT_PUBLIC_STRIPE_AR_PRICING_TABLE_ID=
 NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
+NEXT_PUBLIC_STRIPE_SECRET_KEY=
+NEXT_PUBLIC_STRIPE_WEBHOOK_SECRET=
+
+# supabase
+NEXT_PUBLIC_SUPABASE_URL=
+NEXT_PUBLIC_SUPABASE_ANON_KEY=
+# Only for server-side use (never expose in client)
+SUPABASE_SERVICE_ROLE_KEY=
