--- a/.env.example
+++ b/.env.example
@@ -41,3 +41,6 @@ NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 # Only for server-side use (never expose in client)
 SUPABASE_SERVICE_ROLE_KEY=
+
+# JWT
+JWT_SECRET=
