--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,10 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+APP_ENV="development"
+NEXT_PUBLIC_SENTRY_DSN=""
+
+
 NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 NEXT_PUBLIC_BASE_URL_LABEL="localhost:3000"
 
