--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -38,6 +38,7 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reactuses/core": "^6.0.3",
+    "@sentry/nextjs": "^9.42.0",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.79.0",
     "@tanstack/react-table": "^8.21.2",
