--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-APP_ENV="development"
+NEXT_PUBLIC_APP_ENV="development"
 NEXT_PUBLIC_SENTRY_DSN=""
 
 
