--- a/.env.example
+++ b/.env.example
@@ -4,14 +4,16 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
+# Sentry
 NEXT_PUBLIC_APP_ENV="development"
 NEXT_PUBLIC_SENTRY_DSN=""
-
+NEXT_PUBLIC_ENABLE_SENTRY_IN_DEV="true"
 
 NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 NEXT_PUBLIC_BASE_URL_LABEL="localhost:3000"
 
-DATABASE_URL="postgresql://postgres:1234@localhost:5432/mydb?schema=public"
+DATABASE_URL="postgresql://postgres:1234@localhost:5432/mydb?pgbouncer=true"
+DIRECT_URL="postgresql://postgres:1234@localhost:5432/mydb"
 
 # next auth 
 NEXTAUTH_URL="http://localhost:3000"
