--- a/.env.example
+++ b/.env.example
@@ -25,6 +25,8 @@ MAIL_HOST=
 MAIL_PORT=
 MAIL_USER=
 MAIL_PASS=
+MAIL_SECURE="false"
+NEXT_PUBLIC_SUPPORT_EMAIL="support@rabet-link.com"
 
 # google storage bucket 
 GCP_PROJECT_ID=
