--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@sentry/nextjs": "^9.42.0",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.79.0",
+    "@tanstack/react-query-devtools": "^5.84.2",
     "@tanstack/react-table": "^8.21.2",
     "@tiptap/extension-text-align": "^2.11.7",
     "@tiptap/extension-underline": "^2.11.7",
