--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@radix-ui/react-toggle-group": "^1.1.2",
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reactuses/core": "^6.0.3",
+    "@sentry/integrations": "^7.114.0",
     "@sentry/nextjs": "^9.42.0",
     "@svgr/webpack": "^8.1.0",
     "@tanstack/react-query": "^5.79.0",
@@ -64,7 +65,7 @@
     "jsonwebtoken": "^9.0.2",
     "lodash.throttle": "^4.1.1",
     "lucide-react": "^0.482.0",
-    "next": "15.2.2",
+    "next": "^15.5.0",
     "next-auth": "^4.24.11",
     "next-intl": "^4.1.0",
     "next-themes": "^0.4.6",
@@ -74,9 +75,9 @@
     "postcss": "^8.5.3",
     "qr-code-styling": "^1.9.2",
     "qrcode.react": "^4.2.0",
-    "react": "^19.0.0",
+    "react": "^19.1.1",
     "react-color": "^2.19.3",
-    "react-dom": "^19.0.0",
+    "react-dom": "^19.1.1",
     "react-fast-marquee": "^1.6.5",
     "react-hook-form": "^7.54.2",
     "react-icons": "^5.5.0",
