fix(sentry): depend on env NEXT_PUBLIC_ENABLE_SENTRY_IN_DEV

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@
 # Sentry
 NEXT_PUBLIC_APP_ENV="development"
 NEXT_PUBLIC_SENTRY_DSN=""
+NEXT_PUBLIC_ENABLE_SENTRY_IN_DEV="true"
 
 NEXT_PUBLIC_BASE_URL="http://localhost:3000"
 NEXT_PUBLIC_BASE_URL_LABEL="localhost:3000"
