feat(subscription): add helper method to inform user in case of coupon applied to manual payment

--- a/.env.example
+++ b/.env.example
@@ -44,6 +44,7 @@ NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=
 NEXT_PUBLIC_STRIPE_SECRET_KEY=
 NEXT_PUBLIC_STRIPE_WEBHOOK_SECRET=
 NEXT_PUBLIC_STRIPE_DISCOUNT=
+NEXT_PUBLIC_SUBSCRIPTION_VALUE=
 NEXT_PUBLIC_STRIPE_COUPON_ID=
 
 # supabase
