add google search console key to meta data

--- a/.env.example
+++ b/.env.example
@@ -54,3 +54,6 @@ SUPABASE_SERVICE_ROLE_KEY=
 
 # JWT
 JWT_SECRET=
+
+# google search console
+NEXT_PUBLIC_GOOGLE_SEARCH_CONSOLE_KEY="X9DZNAFjoMyz0Ay4MWtYCpklkge3YepY635dRKuCr-M"
