--- a/.env.example
+++ b/.env.example
@@ -56,4 +56,4 @@ SUPABASE_SERVICE_ROLE_KEY=
 JWT_SECRET=
 
 # google search console
-NEXT_PUBLIC_GOOGLE_SEARCH_CONSOLE_KEY="X9DZNAFjoMyz0Ay4MWtYCpklkge3YepY635dRKuCr-M"
+NEXT_PUBLIC_GOOGLE_SEARCH_CONSOLE_KEY=
