--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "sync-mockups": "ts-node --project tsconfig.scripts.json scripts/sync-mockups.ts"
   },
   "dependencies": {
+    "@babel/runtime": "^7.28.4",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/react": "^0.0.10",
     "@dnd-kit/sortable": "^10.0.0",
@@ -56,6 +57,7 @@
     "@tiptap/starter-kit": "^2.11.7",
     "@types/bcrypt": "^5.0.2",
     "@types/nodemailer": "^6.4.17",
+    "@uiw/react-color": "^2.9.1",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
