feat(TelegramIntegration): add Telegram notifications for new registrations and update TikTok Pixel integration to conditionally load based on environment variable

--- a/.env.example
+++ b/.env.example
@@ -46,14 +46,16 @@ NEXT_PUBLIC_STRIPE_WEBHOOK_SECRET=
 NEXT_PUBLIC_STRIPE_DISCOUNT=
 NEXT_PUBLIC_SUBSCRIPTION_VALUE=
 
-# supabase
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-# Only for server-side use (never expose in client)
-SUPABASE_SERVICE_ROLE_KEY=
-
 # JWT
 JWT_SECRET=
 
 # google search console
 NEXT_PUBLIC_GOOGLE_SEARCH_CONSOLE_KEY=
+
+# TikTok Pixel (optional - leave empty to disable)
+NEXT_PUBLIC_TIKTOK_PIXEL_ID=
+
+# Telegram (admin notifications for new registrations)
+# Create a bot via @BotFather, then get your chat ID (e.g. from @userinfobot or getUpdates)
+TELEGRAM_BOT_TOKEN=
+TELEGRAM_CHAT_ID=
